--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 # Virtual Environment
 # ========================
 ethiopian-medical-data-warehouse
+
+# ========================
+# .env file
+# ========================
+.env
+
+# ========================
+# data
+# ========================
+data
