ignore the yolov5

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ data
 # Cache Files
 # ========================
 __pycache__
+
+
+# ========================
+# Cache Files
+# ========================
+yolov5
